PGOV-874 Fix external link icon wrapping oddly

--- a/web/themes/custom/cloudy/src/css/_overrides.scss
+++ b/web/themes/custom/cloudy/src/css/_overrides.scss
@@ -156,13 +156,13 @@ ul.pagination {
 }
 
 // External links
+span.extlink {
+  margin: 0 ($cloudy-space-4 * 0.5);
 
-.fa-ext.extlink {
-  padding-left: ($cloudy-space-4 * 0.5);
-}
-
-span.mailto::before {
-  background: none;
+  // Make FA icon inline so it wraps correctly when word breaks
+  .fa {
+    display: inline;
+  }
 }
 
 /* Hide the extra spans when printing. */
